<resources>
    <string name="app_name">Ctrl + WiFi</string>
    <string name="search_title">Search</string>

    <string name="menu_item_hotspots">WiFi Hotspots</string>
    <string name="menu_item_refresh">Refresh</string>
    <string name="menu_item_disconnect">Disconnect</string>

    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>

    <string name="hotspots">Hotspots</string>
    <string name="settings">Key database</string>
    <string name="communicate">Communicate</string>

    <!-- Preference strings -->
    <string name="known_hotspots">Known hotspots</string>
    <string name="key">Key</string>
    <string name="about">About</string>
    <string name="author">Andrew Dakhnovich</string>
    <string name="email">heyjohnnyfunt@gmail.com</string>

    <!-- Text view hints -->
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_scan_wifi">Wi-Fi Scan</string>
    <string name="action_connect_wifi">Connect</string>
    <string name="connecting">Connecting</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="password">Password</string>
    <string name="password_hint">WPA/WEP etc.</string>
    <string name="ssid">SSID</string>
    <string name="auth">Authentication</string>

    <!-- Authentication hints -->
    <string name="authed">Authenticated</string>
    <string name="authenticate">Authenticate AP</string>
    <string name="key_derived">New key derived</string>
    <string name="error_connect">Connection to authentication server not established</string>
    <string name="error_timeout">Connection timeout left</string>

    <string name="prompt_loading">Loading&#8230;</string>
    <string name="prompt_settings_not_implemented">Settings not implemented</string>
    <string name="prompt_enabling_wifi">Enabling Wi-Fi&#8230;</string>

    <string name="station_frequency">%1$s MHz</string>
    <string name="station_level">%1$s dBm</string>

    <string-array name="menu_items">
        <item>Stored Keys</item>
        <item>Hotspots</item>
        <item>Settings</item>
    </string-array>

</resources>
